--- a/arm.css
+++ b/arm.css
@@ -35,10 +35,26 @@
   font-family: Verdana;
   font-weight: 350;
 }
-.black{
+.bl{
   position: absolute;
-  font-family: Verdana;
-  font-weight: 500;
+  font-family: 50px;
+  font-weight: 450;
+  top:100px;
+  left:150px;
+  font-size: 55px;
+  width:550px;
+  line-height:50px;
+  white-space:nowrap;   
+  background-size: auto;
+  background-image: url(../new-/photos/car.jpg);
+  background-position: top left;
+  background-repeat: no-repeat;
+  
+}
+.armlogo{
+  position: absolute;
+  font-family: 50px;
+  font-weight: 450;
   top:100px;
   left:150px;
   font-size: 55px;
@@ -46,27 +62,35 @@
   line-height:50px;
   white-space:nowrap;   
 }
+.underline{
+  position: absolute;
+
+}
+
 .products{
   position: absolute;
+
   
 }
 .slutionso{
   position: absolute;
-  
+
 }
 .whyarm{
   position: absolute;
-  
+
 }
 .su{
   position: absolute;
-  
+
 }
 .r{
   position: absolute;
+  line-height:100px;
+
   
 }
 .c{
   position: absolute;
-  
+  line-height:150px;
 }
